--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "my-react-portfolio",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "start": "vite",
     "build": "vite build",
+    "dev": "vite",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -26,5 +25,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
