--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-react-portfolio",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
